--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SetRep</string>
+    <string name="home">Home</string>
+    <string name="statistics">Statistics</string>
+    <string name="calendar">Calendar</string>
+    <string name="new_workout">Start New Workout</string>
 </resources>
