--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="statistics">Statistics</string>
     <string name="calendar">Calendar</string>
     <string name="new_workout">Start New Workout</string>
+    <string name="workout">New Workout</string>
 </resources>
