--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="calendar">Calendar</string>
     <string name="new_workout">Start New Workout</string>
     <string name="workout">New Workout</string>
+    <string name="new_exercise">Add New Exercise</string>
 </resources>
