--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="new_workout">Start New Workout</string>
     <string name="workout">New Workout</string>
     <string name="new_exercise">Add New Exercise</string>
+    <string name="welcome">Welcome to SetRep!</string>
+    <string name="create_profile">Create Profile</string>
+    <string name="enter_profile_name">Enter your profile name</string>
 </resources>
