--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="finish_workout">Finish Workout</string>
     <string name="search_exercise">Add New Exercise</string>
     <string name="go_back">Go Back!</string>
+    <string name="plus">Increase by one</string>
+    <string name="remove">Decrease by one</string>
 </resources>
